Bug fixes on v1
* fixed issue about same sessions for different languages: solved (although this created another small issue I didn't fix yet: when trying both fr and de in the same time and one round finish, this creates an empty line in the other one)
* fixed the overlap of footer

--- a/docs/style.css
+++ b/docs/style.css
@@ -93,18 +93,19 @@ float: left;
 }
 
 
-
 .footer {
  font-size: 0.5em;
  position: fixed;
-    left: 0;
+    right: 0;
     bottom: 0;
-    width: 100%;
+    width: 60%;
+	background-color: white;
 }
 #footer {
-	margin-left: 40px;
-	padding-bottom: 10px;
+	margin-left: 20px;
+	padding-bottom: 0px;
 	padding-top: 10px;
+	background-color: white;
 	}
 
 .clear {
